--- a/object-animations/vibration.html
+++ b/object-animations/vibration.html
@@ -8,7 +8,7 @@
       font-size: 25vh;
       text-align: center;
       padding-top: 15vh;
-    	animation: annoyingVibration 30  0ms linear infinite;
+    	animation: annoyingVibration 300ms linear infinite;
     }
     @keyframes annoyingVibration {
       0% {
